@@ -1,3 +1,8 @@
+2012-05-21  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/53361
+	* testsuite/23_containers/array/cons/53361.cc: New.
+
 2012-05-17  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/44516
